tests/src/frontend/typechecking/invalid/while_true.sk
fun no(): void {
  while (true) void
}
